--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,13 @@ installation.yaml
 user.yaml
 # Sync data is handled separately
 sync/
+# Files that contain persional data
+dicts/custom_personal.txt
+
+# Files that are too large to commit
+# download with `task download-wanxiang-gram`
+wanxiang-lts-zh-hans.gram
+# commit later
+dicts/*
+!dicts/custom_phrase.txt
+opencc/*.txt
