--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -9,3 +9,49 @@ patch:
     - schema: luna_pinyin_simp
     - schema: kokomi_flypy
   menu/page_size: 7
+  switcher/hotkeys:
+    - "Control+Shift+F5"
+  switcher/save_options/+:
+    - emoji_suggestion
+    - tone_display
+
+  # 输入状态切换
+  # https://gist.github.com/lotem/2981316
+  ascii_composer:
+    # CapsLock 键作为输入法切换键
+    good_old_caps_lock: false
+    switch_key:
+      # librime v1.14.0 带来了 set/unset_ascii_mode, 能实现模式按键
+      # 在此之前还是用 shift 切换吧
+      Caps_Lock: clear # 按住 CapsLock 键，已输入字符上屏，同时切换为中文输入
+      Shift_L: clear # 按住左 shift 键，已输入字符上屏，同时切换为英文输入
+      Shift_R: noop
+      Control_L: noop
+      Control_R: clear # 按住右 control 键，直接切换模式
+
+  key_binder:
+    bindings:
+      # Left Shift 切换到英文状态
+      # - { when: always, accept: Shift+Shift_L, set_option: ascii_mode }
+      # Left Control 切换到中文状态
+      # - { when: always, accept: Control+Control_L, unset_option: ascii_mode }
+
+      # Vim like keybindings from default preset
+      - { when: composing, accept: "Control+p", send: Up }
+      - { when: composing, accept: "Control+n", send: Down }
+      - { when: composing, accept: "Control+b", send: Left }
+      - { when: composing, accept: "Control+f", send: Right }
+      - { when: composing, accept: "Control+a", send: Home }
+      - { when: composing, accept: "Control+e", send: End }
+      - { when: composing, accept: "Control+d", send: Delete }
+      - { when: composing, accept: "Control+k", send: "Shift+Delete" }
+      - { when: composing, accept: "Control+h", send: BackSpace }
+      - { when: composing, accept: "Control+g", send: Escape }
+      # 翻页控制
+      - { when: has_menu, accept: minus, send: Page_Up }
+      - { when: has_menu, accept: equal, send: Page_Down }
+      # 输入状态切换
+      - { when: always, accept: "Control+Shift+exclam", select: .next }
+      # - { when: always, accept: "Control+Shift+at", toggle: ascii_mode }
+      # - { when: always, accept: "Control+Shift+numbersign", toggle: full_shape }
+      # - { when: always, accept: "Control+Shift+dollar", toggle: simplification }
