--- a/weasel.custom.yaml
+++ b/weasel.custom.yaml
@@ -4,7 +4,7 @@ patch:
   # 通知显示多长时间
   show_notifications_time: 1200
   # 切换为 ascii 模式时，是否影响所有窗口
-  global_ascii: true
+  global_ascii: false
 
   app_options/+:
     __include: kokomi.style.yaml:/app_options
